<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.consdata</groupId>
	<artifactId>kouncil</artifactId>
	<version>1.6-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>kouncil</name>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.6</version>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.scm.id>github</project.scm.id>
	</properties>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/Consdata/kouncil</url>
		</repository>
	</distributionManagement>

	<scm>
		<developerConnection>scm:git:https://github.com/Consdata/kouncil.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<modules>
		<module>kouncil-frontend</module>
		<module>kouncil-backend</module>
	</modules>

	<repositories>
		<repository>
			<id>confluent</id>
			<name>confluent</name>
			<url>https://packages.confluent.io/maven/</url>
		</repository>
	</repositories>

</project>
